<?xml version="1.0"?>
<package format="2">
<name>ros_hw_pub_sub</name>
<version>0.1.0</version>
<description>ros_hw_pub_sub</description>
<license>Apache 2.0</license>
<author email="pyo@robotis.com">sunkyoung</author>
<maintainer email="pyo@robotis.com">sunkyoung</maintainer>
<url type="website">https://github.com/lee-sunkyoung/ROBIT_Intern_LSK_HW_repo/tree/HW_002.git</url>
<url type="repository">https://github.com/lee-sunkyoung/ROBIT_Intern_LSK_HW_repo/tree/HW_002.git</url>
<url type="bugtracker">https://github.com/lee-sunkyoung/ROBIT_Intern_LSK_HW_repo/tree/HW_002.git</url >
<buildtool_depend>catkin</buildtool_depend>
<depend>roscpp</depend>
<depend>std_msgs</depend>
<depend>message_generation</depend>
<export></export >
</package> 
